refactor : 빌더 패턴 적용 및 @Setter 삭제